WebCore:

2009-03-30  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 24594: PolicyDelegate NavigationAction is WebNavigationTypeOther instead of WebNavigationTypeReload
        https://bugs.webkit.org/show_bug.cgi?id=24594
        rdar://problem/6682110

        Test: fast/loader/reload-policy-delegate.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadWithDocumentLoader): Set the triggering action here where we know it's
        the policy loader and can use m_policyLoadType rather than letting it get set inside
        checkNavigationPolicy.

LayoutTests:

2009-03-30  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 24594: PolicyDelegate NavigationAction is WebNavigationTypeOther instead of WebNavigationTypeReload
        https://bugs.webkit.org/show_bug.cgi?id=24594
        rdar://problem/6682110

        * fast/frames/resources/iframe-focus.html: Removed bogus but harmless "layoutTestController.loadCount"
        code.

        * fast/loader/reload-policy-delegate-expected.txt: Added.
        * fast/loader/reload-policy-delegate.html: Added.



Canonical link: https://commits.webkit.org/34175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42120 268f45cc-cd09-0410-ab3c-d52691b4dbfc